try to fix matrix

--- a/.travis.yml
+++ b/.travis.yml
@@ -35,7 +35,7 @@ jobs:
     # Test stage
     - stage: test
 
-      env:
+      matrix:
         - HOST_CLOUD=openstack
         - HOST_CLOUD=gce
         - HOST_CLOUD=aws
