try to fix matrix

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,10 +21,7 @@ env:
   global:
     - TERRAFORM_VERSION=0.9.4
     - ANSIBLE_LINT_VERSION=3.4.13
-  matrix:
-    - HOST_CLOUD=openstack
-    - HOST_CLOUD=gce
-    - HOST_CLOUD=aws
+
 
 addons:
   apt:
@@ -38,6 +35,12 @@ jobs:
 
     # Test stage
     - stage: test
+
+      matrix:
+        env:
+          - HOST_CLOUD=openstack
+          - HOST_CLOUD=gce
+          - HOST_CLOUD=aws
 
       before_install:
 
