try to fix matrix

--- a/.travis.yml
+++ b/.travis.yml
@@ -37,10 +37,7 @@ jobs:
   include:
 
     # Test stage
-    - stage: test
-
-      env:
-        - HOST_CLOUD=
+    - stage: Test on clouds
 
       before_install:
 
