--- a/.travis.yml
+++ b/.travis.yml
@@ -33,93 +33,93 @@ addons:
     packages:
       - shellcheck # code review tool
 
+before_install:
+
+  # Install code review tools
+  # Install Terraform
+  - >
+      travis_retry curl
+      "https://releases.hashicorp.com/terraform/${TERRAFORM_VERSION}/terraform_${TERRAFORM_VERSION}_linux_amd64.zip"
+      > /tmp/terraform.zip
+  - sudo unzip /tmp/terraform.zip -d /usr/bin
+  - sudo chmod +x /usr/bin/terraform
+  # Install pip deps
+  - sudo pip install --upgrade pip
+  - sudo pip install ansible-lint=="${ANSIBLE_LINT_VERSION}"
+
+  # Check code quality
+  # check Terraform
+  - terraform fmt common/cloudflare
+  - terraform fmt common/inventory
+  - terraform fmt "$HOST_CLOUD"
+  - git diff --exit-code # this will fail if terraform changed something
+  # check Ansible
+  # skip ANSIBLE0006: avoid using curl
+  # skip ANSIBLE0012: missing change_when on command/shell etc.
+  - ansible-lint -x ANSIBLE0006,ANSIBLE0012 playbooks/*.yml
+  # check Shell
+  - shellcheck $(find . -type f -name "*.sh")
+  - shellcheck bin/*
+
+# Build Docker image
+install: docker build -t kubenow/provisioners:latest
+
+before_script:
+
+  # Init test deployment
+  - bin/kn init test-deployment
+  - cd test-deployment
+
+  # RENDER CONFIGURATION
+  # Create terraform.tfvars
+  - >
+      if [ "$HOST_CLOUD" = 'openstack' ]; then
+        cp terraform.tfvars.os-template terraform.tfvars
+      else
+        cp "terraform.tfvars.${HOST_CLOUD}-template" terraform.tfvars
+      fi
+  # Common
+  - sed -i -e "s/your-cluster-prefix/kubenow-ci-${TRAVIS_BUILD_NUMBER}-${HOST_CLOUD}/g" terraform.tfvars
+  # AWS
+  - sed -i -e "s/your-acces-key-id/${AWS_ACCESS_KEY_ID}/g" terraform.tfvars
+  - sed -i -e "s#your-secret-access-key#${AWS_SECRET_ACCESS_KEY}#g" terraform.tfvars
+  # GCE
+  - printf '%s\n' "$GCE_CREDENTIALS" > "./service-account.json"
+  - sed -i -e "s/your_project_id/${GCE_PROJECT_ID}/g" terraform.tfvars
+  # OS
+  - sed -i -e "s/your-pool-name/${OS_POOL_NAME}/g" terraform.tfvars
+  - sed -i -e "s/external-net-uuid/${OS_EXTERNAL_NET_UUUID}/g" terraform.tfvars
+  - sed -i -e "s/your-master-flavor/${OS_MASTER_FLAVOR}/g" terraform.tfvars
+  - sed -i -e "s/your-node-flavor/${OS_NODE_FLAVOR}/g" terraform.tfvars
+  - sed -i -e "s/your-edge-flavor/${OS_EDGE_FLAVOR}/g" terraform.tfvars
+  # Enable edges
+  - sed -i -e "s/# edge/edge/g" terraform.tfvars
+  # Cloudflare
+  - sed -i -e "s/# cloudflare/cloudflare/g" terraform.tfvars
+  - sed -i -e "s/# use_cloudflare/use_cloudflare/g" terraform.tfvars
+  - sed -i -e "s/your-cloudflare-email/${CI_CLOUDFLARE_EMAIL}/g" terraform.tfvars
+  - sed -i -e "s/your-cloudflare-token/${CI_CLOUDFLARE_TOKEN}/g" terraform.tfvars
+  - sed -i -e "s/your-domain-name/${CI_CLOUDFLARE_DOMAIN}/g" terraform.tfvars
+
+script:
+  # Import image (AWS doesn't need it)
+  - >
+      if [ "$HOST_CLOUD" = 'openstack' ] || [ "$HOST_CLOUD" = 'gce' ]; then
+        ../bin/kn ansible-playbook playbooks/import-"$HOST_CLOUD"-image.yml
+      fi
+  # Deploy
+  - ../bin/kn terraform get "$HOST_CLOUD"
+  - ../bin/kn travis_retry terraform apply "$HOST_CLOUD"
+  - ../bin/kn ansible-playbook playbooks/install-core.yml
+  # Test
+  - ../bin/kn ansible-playbook playbooks/infra-test.yml
+
+after_script:
+  - travis_retry ../bin/kn terraform destroy -force "$HOST_CLOUD"
+  - travis_retry terraform destroy -force "$HOST_CLOUD" # in case there is some problem with kn
+
 jobs:
   include:
-
-      - before_install:
-          # Install code review tools
-          # Install Terraform
-          - >
-              travis_retry curl
-              "https://releases.hashicorp.com/terraform/${TERRAFORM_VERSION}/terraform_${TERRAFORM_VERSION}_linux_amd64.zip"
-              > /tmp/terraform.zip
-          - sudo unzip /tmp/terraform.zip -d /usr/bin
-          - sudo chmod +x /usr/bin/terraform
-          # Install pip deps
-          - sudo pip install --upgrade pip
-          - sudo pip install ansible-lint=="${ANSIBLE_LINT_VERSION}"
-
-          # Check code quality
-          # check Terraform
-          - terraform fmt common/cloudflare
-          - terraform fmt common/inventory
-          - terraform fmt "$HOST_CLOUD"
-          - git diff --exit-code # this will fail if terraform changed something
-          # check Ansible
-          # skip ANSIBLE0006: avoid using curl
-          # skip ANSIBLE0012: missing change_when on command/shell etc.
-          - ansible-lint -x ANSIBLE0006,ANSIBLE0012 playbooks/*.yml
-          # check Shell
-          - shellcheck $(find . -type f -name "*.sh")
-          - shellcheck bin/*
-
-      # Build Docker image
-      - install: docker build -t kubenow/provisioners:latest
-
-      - before_script:
-
-          # Init test deployment
-          - bin/kn init test-deployment
-          - cd test-deployment
-
-          # RENDER CONFIGURATION
-          # Create terraform.tfvars
-          - >
-              if [ "$HOST_CLOUD" = 'openstack' ]; then
-                cp terraform.tfvars.os-template terraform.tfvars
-              else
-                cp "terraform.tfvars.${HOST_CLOUD}-template" terraform.tfvars
-              fi
-          # Common
-          - sed -i -e "s/your-cluster-prefix/kubenow-ci-${TRAVIS_BUILD_NUMBER}-${HOST_CLOUD}/g" terraform.tfvars
-          # AWS
-          - sed -i -e "s/your-acces-key-id/${AWS_ACCESS_KEY_ID}/g" terraform.tfvars
-          - sed -i -e "s#your-secret-access-key#${AWS_SECRET_ACCESS_KEY}#g" terraform.tfvars
-          # GCE
-          - printf '%s\n' "$GCE_CREDENTIALS" > "./service-account.json"
-          - sed -i -e "s/your_project_id/${GCE_PROJECT_ID}/g" terraform.tfvars
-          # OS
-          - sed -i -e "s/your-pool-name/${OS_POOL_NAME}/g" terraform.tfvars
-          - sed -i -e "s/external-net-uuid/${OS_EXTERNAL_NET_UUUID}/g" terraform.tfvars
-          - sed -i -e "s/your-master-flavor/${OS_MASTER_FLAVOR}/g" terraform.tfvars
-          - sed -i -e "s/your-node-flavor/${OS_NODE_FLAVOR}/g" terraform.tfvars
-          - sed -i -e "s/your-edge-flavor/${OS_EDGE_FLAVOR}/g" terraform.tfvars
-          # Enable edges
-          - sed -i -e "s/# edge/edge/g" terraform.tfvars
-          # Cloudflare
-          - sed -i -e "s/# cloudflare/cloudflare/g" terraform.tfvars
-          - sed -i -e "s/# use_cloudflare/use_cloudflare/g" terraform.tfvars
-          - sed -i -e "s/your-cloudflare-email/${CI_CLOUDFLARE_EMAIL}/g" terraform.tfvars
-          - sed -i -e "s/your-cloudflare-token/${CI_CLOUDFLARE_TOKEN}/g" terraform.tfvars
-          - sed -i -e "s/your-domain-name/${CI_CLOUDFLARE_DOMAIN}/g" terraform.tfvars
-
-      - script:
-          # Import image (AWS doesn't need it)
-          - >
-              if [ "$HOST_CLOUD" = 'openstack' ] || [ "$HOST_CLOUD" = 'gce' ]; then
-                ../bin/kn ansible-playbook playbooks/import-"$HOST_CLOUD"-image.yml
-              fi
-          # Deploy
-          - ../bin/kn terraform get "$HOST_CLOUD"
-          - ../bin/kn travis_retry terraform apply "$HOST_CLOUD"
-          - ../bin/kn ansible-playbook playbooks/install-core.yml
-          # Test
-          - ../bin/kn ansible-playbook playbooks/infra-test.yml
-
-      - after_script:
-          - travis_retry ../bin/kn terraform destroy -force "$HOST_CLOUD"
-          - travis_retry terraform destroy -force "$HOST_CLOUD" # in case there is some problem with kn
-
     # Docker push stage
     - stage: Push container
       script:
