--- a/playbooks/roles/heketi/files/heketi-deployment.yml
+++ b/playbooks/roles/heketi/files/heketi-deployment.yml
@@ -1,4 +1,30 @@
 ---
+kind: Namespace
+apiVersion: v1
+metadata:
+  name: storage-heketi
+  labels:
+    name: storage-heketi
+---
+kind: ServiceAccount
+apiVersion: v1
+metadata:
+  name: heketi-service-account
+  namespace: storage-heketi
+---
+kind: ClusterRoleBinding
+apiVersion: rbac.authorization.k8s.io/v1beta1
+metadata:
+  name: storage-heketi-binding
+roleRef:
+  apiGroup: rbac.authorization.k8s.io
+  kind: ClusterRole
+  name: admin
+subjects:
+- kind: ServiceAccount
+  name: heketi-service-account
+  namespace: storage-heketi
+---
 kind: List
 apiVersion: v1
 items:
