--- a/playbooks/roles/traefik/tasks/main.yml
+++ b/playbooks/roles/traefik/tasks/main.yml
@@ -37,3 +37,23 @@
   command: >
     kubectl apply -f
     /etc/traefik/traefik-daemonset.yml
+
+# ready count could not be done with jsonpath and filter because of issue
+# https://github.com/kubernetes/kubernetes/issues/45546
+- name: "get desired pod count"
+  shell: >
+    kubectl get ds --all-namespaces
+    | grep traefik-ingress-controller
+    | awk '{print $3;}'
+  register: get_desired_count
+
+- name: wait for DaemonSet to be Ready
+  shell: >
+    kubectl get ds --all-namespaces
+    | grep traefik-ingress-controller
+    | awk '{print $5;}'
+  register: get_ready_count
+  until: "{{get_desired_count.stdout | int}} == {{get_ready_count.stdout | int}}"
+  # Wait for 6 minutes
+  retries: 120
+  delay: 3
