use command instead of shell

--- a/playbooks/roles/common/tasks/untaint_master.yml
+++ b/playbooks/roles/common/tasks/untaint_master.yml
@@ -1,5 +1,5 @@
 ---
 - name: "untaint master since it is the only node"
-  shell: >
+  command: >
     kubectl taint nodes
     --all node-role.kubernetes.io/master-
