--- a/playbooks/roles/weave-network/tasks/main.yml
+++ b/playbooks/roles/weave-network/tasks/main.yml
@@ -19,20 +19,38 @@
 
 # ready count could not be done with jsonpath and filter because of issue
 # https://github.com/kubernetes/kubernetes/issues/45546
-- name: "get desired pod count"
+- name: "get desired weave pod count"
   shell: >
     kubectl get ds --all-namespaces
     | grep weave-net
     | awk '{print $3;}'
-  register: get_desired_count
+  register: get_desired_count_weave
 
 - name: wait for weave DaemonSet to be Ready
   shell: >
     kubectl get ds --all-namespaces
     | grep weave-net
     | awk '{print $5;}'
-  register: get_ready_count
-  until: "{{get_desired_count.stdout | int}} == {{get_ready_count.stdout | int}}"
+  register: get_ready_count_weave
+  until: "{{get_desired_count_weave.stdout | int}} == {{get_ready_count_weave.stdout | int}}"
+  # Wait for 6 minutes
+  retries: 120
+  delay: 3
+
+- name: "get desired kube-dns pod count"
+  shell: >
+    kubectl get ds --all-namespaces
+    | grep kube-dns
+    | awk '{print $3;}'
+  register: get_desired_count_dns
+
+- name: wait for weave DaemonSet to be Ready
+  shell: >
+    kubectl get ds --all-namespaces
+    | grep kube-dns
+    | awk '{print $5;}'
+  register: get_ready_count_dns
+  until: "{{get_desired_count_dns.stdout | int}} == {{get_ready_count_dns.stdout | int}}"
   # Wait for 6 minutes
   retries: 120
   delay: 3
