add retries to kube dns ready

--- a/playbooks/roles/weave-network/tasks/main.yml
+++ b/playbooks/roles/weave-network/tasks/main.yml
@@ -52,3 +52,5 @@
     -o jsonpath='{.status.containerStatuses[*].ready}'
   register: get_ready_statuses
   until: (get_ready_statuses.stdout | match('^(true\s)*true$'))
+  retries: 120
+  delay: 3
