--- a/playbooks/roles/common/tasks/wait-nodes.yml
+++ b/playbooks/roles/common/tasks/wait-nodes.yml
@@ -4,37 +4,51 @@
     host={{ ansible_ssh_host | default(inventory_hostname) }}
     port={{ ansible_port | default(22) }}
     search_regex=OpenSSH
-    delay=10
-    timeout=300
+    delay=0
+    connect_timeout=1
+    timeout=360
 
-- name: "render node count"
-  local_action: >
-    shell
-    cat terraform.tfvars |
-    grep '[node|edge]_count' |
-    awk '{print $3;}' |
-    tr -d '"' |
-    awk '{s+=$1} END {print s}'
-  args:
-    chdir: "{{playbook_dir}}/.."
-  register: get_nodes_count
-  when:
-    - nodes_count is undefined
+- name: "get cloud-init log"
+  become: yes
+  command: >
+    cat /var/log/cloud-init-output.log
+  register: cloud_init_log
 
-- name: "set nodes_count fact"
+- name: create cloud init log message
   set_fact:
-    # +1 because master is also one node
-    nodes_count: "{{(get_nodes_count.stdout | int) + 1}}"
-  when:
-    - nodes_count is undefined
+    cloud_init_msg: "{% if cloud_init_log.stdout.find('Using Kubernetes version') != -1 %}'Kubernetes master has started initialization successfully'{% else %}'Problem with init of master? {{ cloud_init_log.stdout}}'{% endif %}"
 
-- name: "wait for all nodes to join the master"
-  shell: >
-    kubectl get nodes
-    -o jsonpath='{.items[*].status.conditions[-1:].type}' |
-    grep -o 'Ready' | wc -l
-  register: get_ready_nodes
-  until: "{{get_ready_nodes.stdout | int}} == {{nodes_count | int}}"
-  # Wait for 15 minutes
-  retries: 180
-  delay: 5
+- name: print master cloud init log message
+  debug:
+    msg: "{{ cloud_init_msg }}"
+
+- block:
+
+  - name: "wait for all nodes to join the master"
+    shell: >
+      kubectl get nodes
+      -o jsonpath='{.items[*].status.conditions[-1:].type}' |
+      grep -o 'Ready' | wc -l
+    register: get_ready_nodes
+    until: "{{get_ready_nodes.stdout | int}} == {{nodes_count | int}}"
+    # Wait for 15 minutes
+    retries: 180
+    delay: 5
+
+  rescue:
+
+  - name: "get cloud-init log"
+    become: yes
+    command: >
+      cat /var/log/cloud-init-output.log
+    register: cloud_init_log
+
+  - name: print master cloud init log
+    debug:
+      msg: "{{ cloud_init_log.stdout }}"
+
+  - name: fail play
+    fail:
+      msg: "All nodes have not joined the master"
+
+
