--- a/playbooks/roles/common/tasks/wait-nodes.yml
+++ b/playbooks/roles/common/tasks/wait-nodes.yml
@@ -12,7 +12,7 @@
   local_action: wait_for
     host={{ ansible_ssh_host | default(inventory_hostname) }}
     port={{ ansible_port | default(22) }}
-    state: started
+    state=started
     delay=0
     connect_timeout=1
     timeout=300
