--- a/playbooks/roles/heketi-gluster-server/tasks/main.yml
+++ b/playbooks/roles/heketi-gluster-server/tasks/main.yml
@@ -1,21 +1,19 @@
 ---
 - name: create gluster kubenow yaml directory
-  become: yes
   file:
-    path: /etc/glusterfs/kubernetes
+    path: "~/.kubernetes-yaml/glusterfs/"
     state: directory
     mode: 0755
 
 - name: copy gluster DaemonSet configuration
-  become: yes
   copy:
     src: glusterfs-daemonset.yml
-    dest: "/etc/glusterfs/kubernetes/glusterfs-daemonset.yml"
+    dest: "~/.kubernetes-yaml/glusterfs/glusterfs-daemonset.yml"
 
 - name: create gluster DaemonSet
   command: >
     kubectl apply -f
-    /etc/glusterfs/kubernetes/glusterfs-daemonset.yml
+    ~/.kubernetes-yaml/glusterfs/glusterfs-daemonset.yml
 
 # the plays below is not really needed - just for verifying everything is OK
 
