--- a/playbooks/roles/heketi/tasks/main.yml
+++ b/playbooks/roles/heketi/tasks/main.yml
@@ -1,21 +1,19 @@
 ---
 - name: create heketi yaml directory
-  become: yes
   file:
-    path: /etc/heketi/kubernetes
+    path: ~/.kubernetes-yaml/heketi/
     state: directory
     mode: 0755
 
 - name: copy heketi configuration
-  become: yes
   copy:
     src: heketi-deployment.yml
-    dest: "/etc/heketi/kubernetes/heketi-deployment.yml"
+    dest: "~/.kubernetes-yaml/heketi/heketi-deployment.yml"
 
 - name: start heketi
   command: >
     kubectl apply -f
-    /etc/heketi/kubernetes/heketi-deployment.yml
+    ~/.kubernetes-yaml/heketi/heketi-deployment.yml
 
 - name: wait for heketi to be Running
   command: >
