update traefik to support selected single ingress basic auth, fixed typo in untaint master

--- a/playbooks/roles/common/tasks/untaint_master.yml
+++ b/playbooks/roles/common/tasks/untaint_master.yml
@@ -1,5 +1,5 @@
 ---
-- name: "untaint master since it is the only node"
+- name: "untaint master if it is the only node"
   command: >
     kubectl taint nodes
     --all node-role.kubernetes.io/master-
