--- a/playbooks/install-heketi-gluster.yml
+++ b/playbooks/install-heketi-gluster.yml
@@ -1,6 +1,4 @@
 - hosts: master
   gather_facts: False
   roles:
-    - { role: heketi, tags: [ 'heketi-glusterfs' ] }
-    - { role: heketi-gluster-server, tags: [ 'heketi-glusterfs' ] }
-    - { role: heketi-storage, tags: [ 'heketi-glusterfs' ] }
+    - { role: heketi-gluster, tags: [ 'heketi-glusterfs' ] }
