--- a/playbooks/roles/heketi-gluster/tasks/storage-creation.yml
+++ b/playbooks/roles/heketi-gluster/tasks/storage-creation.yml
@@ -1,46 +1,25 @@
-- name: install heketi-cli (TODO remove and move into requirements.sh)
-  get_url:
-    url: https://github.com/heketi/heketi/releases/download/v4.0.0/heketi-client-v4.0.0.linux.amd64.tar.gz
-    dest: /tmp/heketi-client.amd64.tar.gz
-
-- name: unpack heketi-cli
-  unarchive:
-    src: /tmp/heketi-client.amd64.tar.gz
-    dest: /tmp/
-    remote_src: True
-
-- name: copy heketi-cli to /usr/local/bin
-  become: yes
-  copy:
-    src: /tmp/heketi-client/bin/heketi-cli
-    dest: /usr/local/bin
-    mode: 0755
-    remote_src: True
-
 - name: retrieve gluster-pod IPs
   command: >
-    kubectl get pods 
+    kubectl get pods
+    --namespace=storage-heketi
     -o jsonpath='{.items[?(@.spec.containers[*].name=="glusterfs")].status.podIP}'
   register: get_ips
 
-- set_fact:
+- name: set fact enpoint_list
+  set_fact:
     enpoint_list: "[\"{{get_ips.stdout | replace(' ','\",\"')}}\"]"
-    
-- debug:
-    msg: "{{ enpoint_list }}"
-    
+
 - name: retrieve gluster-server nodenames
   command: >
-    kubectl get pods 
+    kubectl get pods
+    --namespace=storage-heketi
     -o jsonpath='{.items[?(@.spec.containers[*].name=="glusterfs")].spec.nodeName}'
   register: get_nodenames
 
-- set_fact:
+- name: set fact host_list
+  set_fact:
     host_list: "[\"{{get_nodenames.stdout | replace(' ','\",\"')}}\"]"
 
-- debug:
-    msg: "{{ host_list }}"
-    
 - name: combine host-list with endpoint-list
   set_fact:
      combined_host_ip: "{{ combined_host_ip|default({})|combine({item.0: item.1}) }}"
@@ -49,37 +28,41 @@
     - "{{ enpoint_list }}"
   register: combined_host_ip
 
-- debug:
-    msg: "{{ combined_host_ip }}"
-
-# var extra_disk_device is specified in inventory
 - name: render topology
-  become: yes
   template:
     src: topology.json
-    dest: "/etc/heketi/kubernetes/topology.json"  
+    dest: "~/.kubernetes-yaml/heketi/topology.json"
 
 - name: retrieve heketi endpoint
   command: >
     kubectl get endpoints
+    --namespace=storage-heketi
     -o jsonpath='{.items[?(@.metadata.name=="heketi")].subsets[*].addresses[*].ip}:{.items[?(@.metadata.name=="heketi")].subsets[*].ports[*].port}'
-  register: get_endpoint
+  register: get_heketi_endpoint
 
-- set_fact:
-    endpoint: "{{ get_endpoint.stdout }}"
+- name: set fact get_heketi_endpoint
+  set_fact:
+    heketi_endpoint: "{{ get_heketi_endpoint.stdout }}"
 
 - name: apply topology-file to heketi
   command: >
-    heketi-cli -s http://{{ endpoint }} topology load --json=/etc/heketi/kubernetes/topology.json
+    heketi-cli -s http://{{ heketi_endpoint }} topology load --json=$HOME/.kubernetes-yaml/heketi/topology.json
+
+- name: set fact glusternode_count
+  set_fact:
+    glusterpod_count: "{{ (enpoint_list | length) | int }}"
+
+# volumtype (replication factor): <VolumeDurability>:number eg. none:1, replicate:2, replicate:3 , disperse:???
+- name: set fact volumetype
+  set_fact:
+    volumetype: "{% if (glusterpod_count | int) == 1 %}none:1{% else %}replicate:{{ glusterpod_count }}{% endif %}"
 
 - name: render storage-class
-  become: yes
   template:
     src: storage-class.yml
-    dest: "/etc/heketi/kubernetes/storage-class.yml"
-    
+    dest: "~/.kubernetes-yaml/heketi/storage-class.yml"
+
 - name: create storage-class
   command: >
     kubectl apply -f
-    /etc/heketi/kubernetes/storage-class.yml
-
+    $HOME/.kubernetes-yaml/heketi/storage-class.yml
