Stable 5 tag to heketi dockerimage instead of dev and Ansible-lint version update

--- a/playbooks/roles/heketi-gluster/files/heketi-server.yml
+++ b/playbooks/roles/heketi-gluster/files/heketi-server.yml
@@ -76,7 +76,7 @@ items:
       spec:
         serviceAccountName: heketi-service-account
         containers:
-        - image: heketi/heketi:dev
+        - image: heketi/heketi:5
           imagePullPolicy: Always
           name: heketi
           env:
