Deploy cheese using helm

--- a/playbooks/roles/traefik-test/tasks/main.yml
+++ b/playbooks/roles/traefik-test/tasks/main.yml
@@ -15,13 +15,10 @@
   set_fact:
     cheese_domain_name: "{{domain}}"
 
-- name: render cheese deployment
-  template:
-    src: cheese-deployment.yml.j2
-    dest: "/tmp/cheese-deployment.yml"
-
-- name: submit cheese deployment
-  command: kubectl apply -f /tmp/cheese-deployment.yml
+- name: deploy cheese helm package
+  command: >
+    helm install --name cheese
+    --set domain={{cheese_domain_name}} charts/cheese
 
 - name: "test stilton"
   include: >
