--- a/.travis.yml
+++ b/.travis.yml
@@ -133,10 +133,10 @@ jobs:
         # Build and push Docker image (needs to be build again in this stage)
         - docker login -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD"
         - >
-            if [ -z $TRAVIS_TAG ]; then
+            if [ $TRAVIS_BRANCH == 'master' ]; then
               docker build -t kubenow/provisioners:master .
               docker push kubenow/provisioners:master
-            elif [ $TRAVIS_BRANCH != 'master' ]; then
+            elif [ ! -z $TRAVIS_TAG ]; then
               docker build -t kubenow/provisioners:$TRAVIS_TAG \
                 -t kubenow/provisioners:latest .
               docker push kubenow/provisioners:$TRAVIS_TAG
