--- a/playbooks/roles/traefik-test/tasks/main.yml
+++ b/playbooks/roles/traefik-test/tasks/main.yml
@@ -18,7 +18,7 @@
 - name: deploy cheese helm package
   command: >
     helm install --name cheese
-    --set domain={{cheese_domain_name}} charts/cheese
+    --set domain={{cheese_domain_name}} kubenow/cheese
 
 - name: "test stilton"
   include: >
