include heketi and gluster conditionally if glustenode or edgenode count > 0, Also adds optional gluster_volumetype to config and inventory

--- a/playbooks/install-core.yml
+++ b/playbooks/install-core.yml
@@ -4,5 +4,5 @@
     - { role: common, tags: [ 'minimal' ] }
     - { role: weave-network, tags: [ 'minimal' ] }
     - { role: start-helm, tags: [ 'minimal' ] }
-    - { role: traefik, tags: [ 'traefik' ] }
-    - { role: heketi-gluster, tags: [ 'heketi-glusterfs' ] }
+    - { role: traefik, tags: [ 'traefik' ], when {{groups['edge'] | length}} > 0 }
+    - { role: heketi-gluster, tags: [ 'heketi-glusterfs' ], when glusternode_count is defined and glusternode_count > 0 }
