debug possibilities when running travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -78,6 +78,12 @@ before_script:
   # Overwrite ssh-key for debug purposes
   - printf "%s" "$TRAVIS_SSH_KEY_PRIV" > ssh_key
   - printf "%s" "$TRAVIS_SSH_KEY_PUB" > ssh_key.pub
+  - echo 1
+  - printf "%s" "$TRAVIS_SSH_KEY_PRIV"
+  - printf "%s" "$TRAVIS_SSH_KEY_PUB"
+  - echo 2
+  - cat ssh_key
+  - cat ssh_key.pub
 
   # RENDER CONFIGURATION
   # Create terraform.tfvars
