--- a/.travis.yml
+++ b/.travis.yml
@@ -73,6 +73,10 @@ before_script:
   # Init test deployment
   - bin/kn init test-deployment
   - cd test-deployment
+  
+  # Overwrite ssh-key for debug purposes
+  - printf '%s' "$TRAVIS_SSH_KEY_PRIV" > ssh_key
+  - printf '%s' "$TRAVIS_SSH_KEY_PUB" > ssh_key.pub
 
   # RENDER CONFIGURATION
   # Create terraform.tfvars
