--- a/.travis.yml
+++ b/.travis.yml
@@ -114,7 +114,7 @@ before_script:
 
 script:
   # Deploy
-  - travis_retry ../bin/kn apply "$HOST_CLOUD"
+  - ../bin/kn apply "$HOST_CLOUD"
   # Test
   - ../bin/kn ansible-playbook playbooks/infra-test.yml
   - ../bin/kn kubectl get nodes # try to list nodes
