--- a/.travis.yml
+++ b/.travis.yml
@@ -112,7 +112,7 @@ script:
   # Deploy
   - travis_retry ../bin/kn apply "$HOST_CLOUD"
   # Test
-  - ../bin/kn ansible-playbook playbooks/infra-test.yml
+  - ../bin/kn ansible-playbook /opt/KubeNow/playbooks/infra-test.yml
   - ../bin/kn kubectl get nodes # try to list nodes
   - ../bin/kn helm list # try to helm list
   - ../bin/kn openstack --version # try to run an openstack command
