changed default ci-resion for aws

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ branches:
 
 env:
   global:
-    - TERRAFORM_VERSION=0.9.4
+    - TERRAFORM_VERSION=0.10.7
     - ANSIBLE_LINT_VERSION=3.4.15
   matrix:
     - HOST_CLOUD=openstack
@@ -73,7 +73,7 @@ before_script:
   # Init test deployment
   - bin/kn init test-deployment
   - cd test-deployment
-  
+
   # Overwrite ssh-key for debug purposes
   - echo -e "$TRAVIS_SSH_KEY_PRIV" > ssh_key
   - echo -e "$TRAVIS_SSH_KEY_PUB" > ssh_key.pub
@@ -91,6 +91,7 @@ before_script:
   # AWS
   - sed -i -e "s/your-acces-key-id/${AWS_ACCESS_KEY_ID}/g" terraform.tfvars
   - sed -i -e "s#your-secret-access-key#${AWS_SECRET_ACCESS_KEY}#g" terraform.tfvars
+  - sed -i -e "s/eu-west-1/${AWS_DEFAULT_REGION}/g" terraform.tfvars
   # GCE
   - printf '%s\n' "$GCE_CREDENTIALS" > "./service-account.json"
   - sed -i -e "s/your_project_id/${GCE_PROJECT_ID}/g" terraform.tfvars
